# starklings

./: .env  .gitignore  .pylintrc  CONTRIBUTING.md  Makefile  README.md  common_math_operations00.cairo.txt  conftest.py  deploy.py  dummy_file.cairo  install.sh  migrate.sh  package-lock.json  protostar.toml  pyproject.toml  pytest.ini  requirements.txt  starklings.py  starklings.spec
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_binaries.yml  deployment.yml  formatting.yml  linting.yml  test.yml  tests.yml
.patches/beginner/: ex00.cairo.patch  ex01.cairo.patch  ex02.cairo.patch  ex03.cairo.patch  ex04.cairo.patch
.patches/builtins/: bitwise.cairo.patch
.patches/hints/: hints00.cairo.patch  hints01.cairo.patch
.patches/implicit_arguments/: implicit_arguments01.cairo.patch  implicit_arguments02.cairo.patch  implicit_arguments03.cairo.patch
.patches/operations/: felt01.cairo.patch  felt02.cairo.patch  operations00.cairo.patch  operations01.cairo.patch  operations02.cairo.patch  operations03.cairo.patch
.patches/recursions/: array01.cairo.patch  array02.cairo.patch  array03.cairo.patch  array04.cairo.patch  collatz_sequence.cairo.patch  recursion01.cairo.patch  struct01.cairo.patch
.patches/registers/: registers00.cairo.patch  registers01.cairo.patch  registers02.cairo.patch  registers03.cairo.patch  registers04.cairo.patch
.patches/revoked_references/: revoked_references01.cairo.patch
.patches/storage/: storage01.cairo.patch  storage02.cairo.patch  storage03.cairo.patch
.patches/strings/: strings00.cairo.patch  strings01.cairo.patch
.patches/syntax/: syntax01.cairo.patch  syntax02.cairo.patch  syntax03.cairo.patch  syntax04.cairo.patch  syntax05.cairo.patch
.patches/tricks/: assert_bool.cairo.patch  inline_if.cairo.patch  no_conditionals.cairo.patch
cli/: menu.sh
contracts/: ex00.cairo  ex01.cairo  ex02.cairo  ex03.cairo  ex04.cairo  models.cairo
contracts/advanced/: ex00.cairo  ex01.cairo
contracts/beginner/: ex00.cairo  ex01.cairo  ex02.cairo  ex03.cairo  ex04.cairo
contracts/core/: dust.cairo  library.cairo  rand.cairo  space.cairo
contracts/ex/: ex00.cairo  ex01.cairo
contracts/interfaces/: dust.cairo  idust.cairo  irand.cairo  iranked_season.cairo  iship.cairo  ispace.cairo  itournament.cairo  rand.cairo  ship.cairo
contracts/libraries/: grid.cairo
contracts/models/: common.cairo
contracts/ships/: basic_ship.cairo  random_move_ship.cairo  remote_controlled_ship.cairo  static_ship.cairo
contracts/test/: dummy_dust.cairo  fake_rand.cairo  fake_space.cairo
contracts/token/: OnlyDust.cairo  StarKonquestBoardingPass.cairo
contracts/tournament/: RankedSeason.cairo  Tournament.cairo
exercises/advanced/: ex00.cairo  ex01.cairo
exercises/hints/: README.md  (+2 more)
scripts/: README.md  add_new_exercise.sh  deploy-only-dust-erc20.py  deploy-ranked-season.py  deploy-space.py  deploy-starkonquest-boarding-pass.py  deploy-tournament.py  deploy.py  patch_and_test_exercises.sh
src/: __init__.py  cli.py  config.py  constants.py  database.py  exercises.py  exercises_test.py  prompt.py  protostar.py  runner.py  runner_test.py  solution.py  solution_test.py  verify.py  verify_test.py  watch.py
starklings-backend/: .env.DEFAULT  README.md  app.py  config.py  db.py  requirements.txt
tests/: deploy.py  fixtures.py  helpers.py  test.cairo  test_advanced_ex00.py  test_advanced_ex01.py  test_basic_ship.cairo  test_beginner_ex00.py  test_beginner_ex01.py  test_beginner_ex02.py  test_beginner_ex03.py  test_beginner_ex04.py  test_dust.py  test_ex00.py  test_ex01.py  test_ex02.py  test_ex03.py  test_ex04.py  test_failure.cairo  test_invalid.cairo  test_missing.cairo  test_multiple_turns.py  test_random_ship.cairo  test_space.cairo  test_space.py  test_static_ship.cairo  test_tournament.py  utils.py
(+146 files in other folders)
