[tool.poetry]
authors = ["OnlyDust"]
description = "An interactive tutorial to get you up and running with Starknet"
name = "starklings"
version = "1.0.0"

[tool.poetry.dependencies]
argparse = "^1.4.0"
black = "^22.3.0"
cairo-lang = {url = "https://files.pythonhosted.org/packages/c0/f6/c850604895a2ce5ff3ef77cdb470b6b0ef50889645748a748e18a1c2269e/cairo-lang-0.8.1.post1.zip#sha256=b3c1a23078ba4e0c8ec45d2cd2ba4873ad70b6723dfba70f70c978c9723ff6eb"}
colorama = "^0.4.4"
openzeppelin-cairo-contracts = "^0.1.0"
patch = "^1.16"
pyinstaller = "ˆ5.0.1"
pylint = "^2.13.8"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
python = ">=3.8 <3.9"
watchdog = "^2.1.7"
starklings-protostar = "^0.2.1"
sentry-sdk = "^1.5.12"

[tool.poetry.dev-dependencies]
GitPython = "^3.1.27"
packaging = "^21.3"
poethepoet = "ˆ0.13.1"
tomli = "<2.0.0"

[tool.poe.tasks]
beginner = "pytest tests/test_beginner*.py"
build = "pyinstaller starklings.spec --noconfirm"
deploy = "python deploy.py"
test = "pytest src"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[[tool.poetry.source]]
name = "test-pypi"
secondary = true
url = "https://test.pypi.org/project/"
